Fix: package.json homepage부분 수정

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-vending",
   "version": "0.1.0",
+  "homepage": "https://leeleeleeleejun.github.io/React_Vending-machine/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
